[project]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "None"}
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length=119
# Файлы, которые не нужно форматировать
exclude ='''
 /(
    \.git
 )/
'''
[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
no_implicit_optional=true
check_untyped_defs=true
warn_unreachable=true
exclude='''
    (^|/)\.venv/
'''

[tool.isort]
line_length=119
force_single_line=true

[dependency-groups]
lint = [
    "black (>=26.3.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
